fix: adjusted desktop spacing between top half (heading/ratings) and bottom half (cards)

--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -19,6 +19,10 @@
 
   &cards {
     margin-top: rem(33px);
+
+    @include breakpoint-up(medium) {
+      margin-top: rem(72px);
+    }
   }
 
   &site-container {
